# portainer-cli

./: README.md  main.py  pyproject.toml
portainer_cli/: __init__.py
