[tool.poetry]
name = "portainer-cli"
version = "0.4.0"
description = "CLI to manage applications on Portainer for CI/CD"
authors = ["Ilhasoft's Web Team <contato@ilhasoft.com.br>", "ported <contact@ported.pw>"]
license = "MIT"
readme = "README.md"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = "^3.11"
plac = "^1.4.0"
requests = "^2.31.0"
validators = "^0.22.0"

[tool.poetry.scripts]
portainer-cli = "main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
